--- a/package.json
+++ b/package.json
@@ -46,7 +46,14 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "date-fns": "^3.6.0",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "input-otp": "^1.4.2",
+    "react-hook-form": "^7.55.0",
+    "embla-carousel-react": "^8.6.0",
+    "react-day-picker": "^8.10.1",
+    "react-resizable-panels": "^2.1.7",
+    "cmdk": "^1.1.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
@@ -64,6 +71,7 @@
     "vite": "^5.4.6"
   }
 }
+
 
 
 
